--- a/server/app/views/reset_password_mailer/send_password_reset_email.html.erb
+++ b/server/app/views/reset_password_mailer/send_password_reset_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p><Click the link below to reset your password.</p>
+    <p>Click the link below to reset your password.</p>
     <p><%= link_to "Reset password", @url %></p>
   </body>
 </html>
