--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
+.bp3-input-group input {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  height: auto;
+  border-radius: 0.375rem;
+  border: solid;
+  border-width: 1px;
+  box-shadow: none;
+  display: block;
+  border-color: rgba(209, 213, 219, 1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bp3-popover-target {
+  width: 100%;
 }
